# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

valgrind_binaries = []

if (is_mac) {
  valgrind_binaries += [
    "../../chromium/src/third_party/valgrind/mac_10.6/bin/ms_print",
    "../../chromium/src/third_party/valgrind/mac_10.6/bin/no_op_client_for_valgrind",
    "../../chromium/src/third_party/valgrind/mac_10.6/bin/valgrind",
    "../../chromium/src/third_party/valgrind/mac_10.6/bin/valgrind-listener",
    "../../chromium/src/third_party/valgrind/mac_10.6/bin/vgdb",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-sse-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-sse-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/32bit-sse.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-avx-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-avx-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-avx.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-sse-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-sse-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/64bit-sse.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/amd64-avx-coresse-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/amd64-avx-coresse.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/amd64-avx-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/amd64-avx-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/amd64-coresse-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/amd64-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-vfpv3-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-vfpv3-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-vfpv3.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-with-vfpv3-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/arm-with-vfpv3.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/default.supp",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/i386-coresse-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/i386-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/libmpiwrap-amd64-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/libmpiwrap-amd64-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/libmpiwrap-amd64-darwin.so.dSYM/Contents/Resources/DWARF/libmpiwrap-amd64-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/libmpiwrap-x86-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/libmpiwrap-x86-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/libmpiwrap-x86-darwin.so.dSYM/Contents/Resources/DWARF/libmpiwrap-x86-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/memcheck-amd64-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/memcheck-amd64-darwin.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/memcheck-amd64-darwin.dSYM/Contents/Resources/DWARF/memcheck-amd64-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/memcheck-x86-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/memcheck-x86-darwin.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/memcheck-x86-darwin.dSYM/Contents/Resources/DWARF/memcheck-x86-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-cp0-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-cp0-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-cp0.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-cpu-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-cpu-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-cpu.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-fpu-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-fpu-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-fpu.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/mips-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-altivec-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-altivec-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-altivec.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-fpu-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-fpu-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-fpu.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power64-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power64-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power64-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power64-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power64-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/power64-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/powerpc-altivec32l-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/powerpc-altivec32l.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/powerpc-altivec64l-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/powerpc-altivec64l.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390-acr-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390-acr-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390-acr.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390-fpr-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390-fpr-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390-fpr.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-core64-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-core64-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-core64.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-generic-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-generic.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-linux64-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-linux64-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/s390x-linux64.xml",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_core-amd64-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_core-amd64-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_core-amd64-darwin.so.dSYM/Contents/Resources/DWARF/vgpreload_core-amd64-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_core-x86-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_core-x86-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_core-x86-darwin.so.dSYM/Contents/Resources/DWARF/vgpreload_core-x86-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_memcheck-amd64-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_memcheck-amd64-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_memcheck-amd64-darwin.so.dSYM/Contents/Resources/DWARF/vgpreload_memcheck-amd64-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_memcheck-x86-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_memcheck-x86-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.6/lib/valgrind/vgpreload_memcheck-x86-darwin.so.dSYM/Contents/Resources/DWARF/vgpreload_memcheck-x86-darwin.so",
    "../../chromium/src/third_party/valgrind/mac_10.7/bin/valgrind",
    "../../chromium/src/third_party/valgrind/mac_10.7/bin/valgrind-listener",
    "../../chromium/src/third_party/valgrind/mac_10.7/bin/vgdb",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-sse-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-sse-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/32bit-sse.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-avx-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-avx-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-avx.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-sse-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-sse-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/64bit-sse.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/amd64-avx-coresse-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/amd64-avx-coresse.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/amd64-avx-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/amd64-avx-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/amd64-coresse-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/amd64-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-vfpv3-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-vfpv3-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-vfpv3.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-with-vfpv3-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/arm-with-vfpv3.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/default.supp",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/i386-coresse-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/i386-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/memcheck-amd64-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/memcheck-amd64-darwin.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/memcheck-amd64-darwin.dSYM/Contents/Resources/DWARF/memcheck-amd64-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/memcheck-x86-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/memcheck-x86-darwin.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/memcheck-x86-darwin.dSYM/Contents/Resources/DWARF/memcheck-x86-darwin",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-cp0-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-cp0-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-cp0.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-cpu-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-cpu-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-cpu.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-fpu-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-fpu-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-fpu.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-linux-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/mips-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-altivec-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-altivec-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-altivec.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-fpu-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-fpu-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-fpu.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power64-core-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power64-core-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power64-core.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power64-linux-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power64-linux-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/power64-linux.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/powerpc-altivec32l-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/powerpc-altivec32l.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/powerpc-altivec64l-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/powerpc-altivec64l.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390-acr-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390-acr-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390-acr.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390-fpr-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390-fpr-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390-fpr.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-core64-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-core64-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-core64.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-generic-valgrind.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-generic.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-linux64-valgrind-s1.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-linux64-valgrind-s2.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/s390x-linux64.xml",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/vgpreload_core-amd64-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/vgpreload_core-x86-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/vgpreload_memcheck-amd64-darwin.so.dSYM/Contents/Info.plist",
    "../../chromium/src/third_party/valgrind/mac_10.7/lib/valgrind/vgpreload_memcheck-x86-darwin.so.dSYM/Contents/Info.plist",
  ]
} else if (is_linux) {
  if (target_cpu == "x64") {
    valgrind_binaries += [
      "../../chromium/src/third_party/valgrind/linux_x64/bin/ms_print",
      "../../chromium/src/third_party/valgrind/linux_x64/bin/no_op_client_for_valgrind",
      "../../chromium/src/third_party/valgrind/linux_x64/bin/valgrind",
      "../../chromium/src/third_party/valgrind/linux_x64/bin/valgrind-listener",
      "../../chromium/src/third_party/valgrind/linux_x64/bin/valgrind-tsan.sh",
      "../../chromium/src/third_party/valgrind/linux_x64/bin/vgdb",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-sse-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-sse-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/32bit-sse.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-avx-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-avx-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-avx.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-sse-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-sse-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/64bit-sse.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/amd64-avx-coresse-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/amd64-avx-coresse.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/amd64-avx-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/amd64-avx-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/amd64-coresse-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/amd64-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-vfpv3-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-vfpv3-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-vfpv3.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-with-vfpv3-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/arm-with-vfpv3.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/default.supp",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/i386-coresse-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/i386-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/memcheck-amd64-linux",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/memcheck-x86-linux",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-cp0-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-cp0-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-cp0.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-cpu-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-cpu-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-cpu.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-fpu-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-fpu-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-fpu.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/mips-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-altivec-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-altivec-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-altivec.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-fpu-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-fpu-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-fpu.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power64-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power64-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power64-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power64-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power64-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/power64-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/powerpc-altivec32l-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/powerpc-altivec32l.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/powerpc-altivec64l-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/powerpc-altivec64l.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390-acr-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390-acr-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390-acr.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390-fpr-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390-fpr-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390-fpr.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-core64-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-core64-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-core64.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-generic-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-generic.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-linux64-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-linux64-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/s390x-linux64.xml",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/vgpreload_core-amd64-linux.so",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/vgpreload_core-x86-linux.so",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/vgpreload_memcheck-amd64-linux.so",
      "../../chromium/src/third_party/valgrind/linux_x64/lib/valgrind/vgpreload_memcheck-x86-linux.so",
    ]
  } else if (target_cpu == "x86") {
    valgrind_binaries += [
      "../../chromium/src/third_party/valgrind/linux_x86/bin/ms_print",
      "../../chromium/src/third_party/valgrind/linux_x86/bin/no_op_client_for_valgrind",
      "../../chromium/src/third_party/valgrind/linux_x86/bin/valgrind",
      "../../chromium/src/third_party/valgrind/linux_x86/bin/valgrind-listener",
      "../../chromium/src/third_party/valgrind/linux_x86/bin/valgrind-tsan.sh",
      "../../chromium/src/third_party/valgrind/linux_x86/bin/vgdb",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-sse-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-sse-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/32bit-sse.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-avx-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-avx-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-avx.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-sse-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-sse-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/64bit-sse.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/amd64-avx-coresse-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/amd64-avx-coresse.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/amd64-avx-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/amd64-avx-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/amd64-coresse-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/amd64-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-vfpv3-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-vfpv3-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-vfpv3.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-with-vfpv3-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/arm-with-vfpv3.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/default.supp",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/i386-coresse-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/i386-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/memcheck-x86-linux",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-cp0-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-cp0-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-cp0.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-cpu-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-cpu-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-cpu.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-fpu-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-fpu-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-fpu.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-linux-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/mips-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-altivec-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-altivec-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-altivec.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-fpu-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-fpu-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-fpu.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power64-core-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power64-core-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power64-core.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power64-linux-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power64-linux-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/power64-linux.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/powerpc-altivec32l-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/powerpc-altivec32l.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/powerpc-altivec64l-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/powerpc-altivec64l.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390-acr-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390-acr-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390-acr.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390-fpr-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390-fpr-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390-fpr.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-core64-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-core64-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-core64.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-generic-valgrind.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-generic.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-linux64-valgrind-s1.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-linux64-valgrind-s2.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/s390x-linux64.xml",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/vgpreload_core-x86-linux.so",
      "../../chromium/src/third_party/valgrind/linux_x86/lib/valgrind/vgpreload_memcheck-x86-linux.so",
    ]
  }
}
