# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

valgrind_dependencies = [
  "../../chromium/src/tools/valgrind/asan/asan_symbolize.py",
  "../../chromium/src/tools/valgrind/asan/third_party/__init__.py",
  "../../chromium/src/tools/valgrind/asan/third_party/asan_symbolize.py",
  "../../chromium/src/tools/valgrind/browser_wrapper_win.py",
  "../../chromium/src/tools/valgrind/chrome_tests.bat",
  "../../chromium/src/tools/valgrind/chrome_tests.py",
  "../../chromium/src/tools/valgrind/chrome_tests.sh",
  "../../chromium/src/tools/valgrind/common.py",
  "../../chromium/src/tools/valgrind/drmemory.bat",
  "../../chromium/src/tools/valgrind/drmemory_analyze.py",
  "../../chromium/src/tools/valgrind/fixed_suppressions.sh",
  "../../chromium/src/tools/valgrind/gdb_helper.py",
  "../../chromium/src/tools/valgrind/locate_valgrind.sh",
  "../../chromium/src/tools/valgrind/memcheck/suppressions.txt",
  "../../chromium/src/tools/valgrind/memcheck/suppressions_linux.txt",
  "../../chromium/src/tools/valgrind/memcheck_analyze.py",
  "../../chromium/src/tools/valgrind/regrind.sh",
  "../../chromium/src/tools/valgrind/scan-build.py",
  "../../chromium/src/tools/valgrind/suppressions.py",
  "../../chromium/src/tools/valgrind/test_suppressions.py",
  "../../chromium/src/tools/valgrind/unused_suppressions.py",
  "../../chromium/src/tools/valgrind/valgrind.sh",
  "../../chromium/src/tools/valgrind/valgrind_test.py",
  "../../chromium/src/tools/valgrind/waterfall.sh",
]
